fix combobox value text for docs in dark mode

--- a/starters/docs/src/ComboBox.css
+++ b/starters/docs/src/ComboBox.css
@@ -20,6 +20,7 @@
   .react-aria-ComboBoxValue {
     margin-top: var(--spacing-1);
     font: var(--font-size-sm) system-ui;
+    color: var(--text-color);
   }
 }
 
